...
                                                <rect key="frame" x="66" y="0.0" width="46" height="30"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <viewLayoutGuide key="safeArea" id="3rb-cA-pci"/>
                                                <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                <state key="normal">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Button">
                                                            <attributes>
                                                                <color key="NSColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <font key="NSFont" metaFont="system" size="15"/>
                                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                            </attributes>
                                                        </fragment>
...
                                                <rect key="frame" x="132" y="0.0" width="46" height="30"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <viewLayoutGuide key="safeArea" id="GLf-nr-Ub2"/>
                                                <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                <state key="normal">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Tap2">
                                                            <attributes>
                                                                <color key="NSColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <font key="NSFont" metaFont="system" size="15"/>
                                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                            </attributes>
                                                        </fragment>
...
            <point key="canvasLocation" x="-166" y="725"/>
        </scene>
        <!--Item-->
        <scene sceneID="lGi-C9-4wj">
            <objects>
                <navigationController restorationIdentifier="ContainerView" storyboardIdentifier="ContainerTest" id="isL-YA-YmQ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="wle-pC-LsA"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6Ah-wZ-Kkq">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
...
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <viewLayoutGuide key="safeArea" id="RWn-cx-jwD"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="jUs-BA-rKC"/>
                    <navigationItem key="navigationItem" id="f8V-tR-8CZ">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="cPe-ty-eVo">
                            <connections>
                                <segue destination="vlh-Nm-00D" kind="show" id="iJ8-Zv-Bli"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
...
