...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <viewLayoutGuide key="safeArea" id="qDk-Ym-PcS"/>
                    </view>
                    <navigationItem key="navigationItem" id="q35-NE-vJl">
                        <barButtonItem key="rightBarButtonItem" title="Home" id="J4j-CK-lmi">
                            <connections>
                                <segue destination="U7A-Be-52X" kind="unwind" unwindAction="cancelToPlayersViewController:" id="69T-po-ulu"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </viewController>
...
            <point key="canvasLocation" x="822" y="-320"/>
        </scene>
        <!--Gestures-->
        <scene sceneID="178-5q-91d">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bGi-GP-LOU" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Gestures" image="Gestures" id="Yer-0S-jGz"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wHb-02-nlP">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
