...
                                                    <rect key="frame" x="16" y="12" width="33.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="L9B-d0-GOV">
                                                    <rect key="frame" x="296" y="12" width="44" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
            <point key="canvasLocation" x="515.20000000000005" y="2497.1514242878561"/>
        </scene>
        <!--Players-->
        <scene sceneID="9Zi-tv-mAw">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ymc-DU-diK" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Players" image="Players" selectedImage="Players" id="wO1-f3-LaR"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jnv-SN-s3E">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
